@@ -4,6 +4,7 @@
 
 ### v1.1.35
 
+- Fixed when the `mark-directories` inputrc variable is `off` (regression introduced in v1.1.1-alpha).
 - Fixed Lua reading from stdin, especially in the Lua debugger (regression introduced in v1.1.25).
 
 ### v1.1.34
